# pico-wave-gen-control

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  build.rs
.cargo/: config.toml
src/: main.rs  serial.rs
src/ui/: components.slint  connection.slint  controls.slint  main.slint  section.slint  setup.slint  shapes.slint  status.slint
src/ui/old/: close_window.slint.bak  main.slint.bak
