[package]
name = "ft-nmr-spectrometer-control"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = [ "Florian Beck <info@florian-beck.de>" ]
build = "build.rs"
edition = "2021"

[build-dependencies]
slint-build = "1.3"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"
slint = "1.3"

# Add pico-wave-gen as dependency for types
pico-wave-gen = { git = "https://github.com/thecodechemist99/pico-wave-gen", branch = "main", default-features = false, features = ["serial"] }
